[gd_scene load_steps=9 format=3 uid="uid://dgvl0kruj60fy"]

[ext_resource type="Script" uid="uid://cdggui00f6ndm" path="res://scripts/menu.gd" id="1_cnlwo"]
[ext_resource type="Theme" uid="uid://dxveohgc0uce2" path="res://themes/default_theme.tres" id="1_kfbsc"]

[sub_resource type="Gradient" id="Gradient_n3ddt"]
colors = PackedColorArray(0.13544941, 0.09605298, 0.041523762, 1, 0.06992452, 0.019128133, 0.020676874, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cnlwo"]
gradient = SubResource("Gradient_n3ddt")
fill_from = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_kfbsc"]
resource_name = "open_extra_settings"
step = 0.083333336
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(-448, -0.25, 0, 0.33333334, -138.7182, 0, -0.417, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(64, -0.25, 0, 0.25, 0, 64, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_gbx6r"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-448, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(64, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bvm7p"]
resource_name = "close_extra_settings"
step = 0.083333336
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.333, 0, -448, -0.46592462, -78.94385, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(64, -0.25, 0, 0.25, 0, 64, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2fskk"]
_data = {
&"RESET": SubResource("Animation_gbx6r"),
&"close_extra_settings": SubResource("Animation_bvm7p"),
&"open_extra_settings": SubResource("Animation_kfbsc")
}

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kfbsc")
script = ExtResource("1_cnlwo")

[node name="back_ground" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(18, 10.125)
texture = SubResource("GradientTexture2D_cnlwo")

[node name="BoxContainer" type="BoxContainer" parent="." groups=["menu_settings_ui"]]
layout_mode = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 768.0
offset_bottom = 320.0
vertical = true

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Tile War"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_game" type="Button" parent="BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Game"

[node name="map" type="BoxContainer" parent="BoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
vertical = true

[node name="Button" type="Label" parent="BoxContainer/map"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Map:"
horizontal_alignment = 1

[node name="map_setting" type="OptionButton" parent="BoxContainer/map"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "This sets the map, before genration.

Some map may have preplaced walls, fuel tiles, capitals, etc..."
button_pressed = true
alignment = 1
selected = 1
item_count = 4
popup/item_0/text = "No genration"
popup/item_0/id = 0
popup/item_1/text = "Standoff"
popup/item_1/id = 1
popup/item_2/text = "Fortress"
popup/item_2/id = 2
popup/item_3/text = "Surrounded"
popup/item_3/id = 3

[node name="BoxContainer3" type="BoxContainer" parent="." groups=["menu_settings_ui"]]
layout_mode = 0
offset_left = 480.0
offset_top = 352.0
offset_right = 672.0
offset_bottom = 608.0
vertical = true

[node name="Label" type="Label" parent="BoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="BoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="Music type" type="BoxContainer" parent="BoxContainer3/BoxContainer"]
layout_mode = 2
vertical = true

[node name="Button" type="Label" parent="BoxContainer3/BoxContainer/Music type"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music type"

[node name="music_type_setting" type="OptionButton" parent="BoxContainer3/BoxContainer/Music type"]
layout_mode = 2
button_pressed = true
selected = 0
item_count = 2
popup/item_0/text = "warning siren"
popup/item_0/id = 0
popup/item_1/text = "wolfquest"
popup/item_1/id = 1

[node name="music_settings" type="BoxContainer" parent="BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="Label" type="Label" parent="BoxContainer3/BoxContainer/music_settings"]
layout_mode = 2
text = "Music volume:"

[node name="MusicSlider" type="HSlider" parent="BoxContainer3/BoxContainer/music_settings"]
layout_mode = 2
max_value = 10.0
value = 10.0
rounded = true

[node name="sfx_settings" type="BoxContainer" parent="BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="Label" type="Label" parent="BoxContainer3/BoxContainer/sfx_settings"]
layout_mode = 2
text = "SFX volume:"

[node name="SfxSlider" type="HSlider" parent="BoxContainer3/BoxContainer/sfx_settings"]
layout_mode = 2
max_value = 10.0
value = 10.0
rounded = true

[node name="multiplayer" type="Button" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 592.0
offset_right = 1144.0
offset_bottom = 632.0
text = "Local Multiplayer"

[node name="Extra_options" type="Panel" parent="." groups=["menu_settings_ui"]]
layout_mode = 0
offset_left = -448.0
offset_top = 64.0
offset_bottom = 576.0

[node name="BoxContainer" type="BoxContainer" parent="Extra_options"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 504.0
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Extra Game
Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Extra_options/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="map Settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Map Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings"]
layout_mode = 2

[node name="wall_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="wall_text" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/wall_settings"]
unique_name_in_owner = true
layout_mode = 2
text = "Wall count:"

[node name="WallSlider" type="HSlider" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/wall_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Controls the number of Wall tiles there will be added in grenrating a map."
max_value = 160.0
rounded = true

[node name="fuel_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="fuel_text" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/fuel_settings"]
unique_name_in_owner = true
layout_mode = 2
text = "fuel count:"

[node name="FuelSlider" type="HSlider" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/fuel_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Controls the number of fuel tiles there will be added in grenrating a map."
max_value = 76.0
value = 16.0
rounded = true

[node name="HSeparator" type="HSeparator" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="claim settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Claim Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings"]
layout_mode = 2
columns = 2

[node name="green_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
vertical = true

[node name="green_mode" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings/green_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Greenwich"

[node name="green_claim_type" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings/green_mode"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This controls who is at play and if they are a player or not."
selected = 2
item_count = 3
popup/item_0/text = "disabled"
popup/item_0/id = 0
popup/item_1/text = "bot"
popup/item_1/id = 1
popup/item_2/text = "player"
popup/item_2/id = 2

[node name="green_name" type="LineEdit" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This sets the name of the claim in game if controled by a player."
placeholder_text = "Greenwich"

[node name="purple_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
vertical = true

[node name="purple_mode" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings/purple_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Plum Valley"

[node name="purple_claim_type" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings/purple_mode"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This controls who is at play and if they are a player or not."
selected = 2
item_count = 3
popup/item_0/text = "disabled"
popup/item_0/id = 0
popup/item_1/text = "bot"
popup/item_1/id = 1
popup/item_2/text = "player"
popup/item_2/id = 2

[node name="purple_name" type="LineEdit" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This sets the name of the claim in game if controled by a player."
placeholder_text = "Plum Valley"

[node name="yellow_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
vertical = true

[node name="yellow_mode" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings/yellow_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "York Street"

[node name="yellow_claim_type" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings/yellow_mode"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This controls who is at play and if they are a player or not."
selected = 2
item_count = 3
popup/item_0/text = "disabled"
popup/item_0/id = 0
popup/item_1/text = "bot"
popup/item_1/id = 1
popup/item_2/text = "player"
popup/item_2/id = 2

[node name="yellow_name" type="LineEdit" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This sets the name of the claim in game if controled by a player."
placeholder_text = "York Street"

[node name="red_settings" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
vertical = true

[node name="red_mode" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings/red_mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "River Solme"

[node name="red_claim_type" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings/red_mode"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This controls who is at play and if they are a player or not."
selected = 2
item_count = 3
popup/item_0/text = "disabled"
popup/item_0/id = 0
popup/item_1/text = "bot"
popup/item_1/id = 1
popup/item_2/text = "player"
popup/item_2/id = 2

[node name="red_name" type="LineEdit" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This sets the name of the claim in game if controled by a player."
placeholder_text = "River Solme"

[node name="player_setting" type="CheckButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "Have Player"

[node name="purple_setting" type="CheckButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "Have plum valey"

[node name="yellow_setting" type="CheckButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "Have york street"

[node name="red_setting" type="CheckButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "Have river solme"

[node name="BoxContainer" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings"]
layout_mode = 2

[node name="Button" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ai level"

[node name="ai_level_setting" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
selected = 1
item_count = 3
popup/item_0/text = "level 1"
popup/item_0/id = 0
popup/item_1/text = "level 2"
popup/item_1/id = 1
popup/item_2/text = "level 3"
popup/item_2/id = 2

[node name="BoxContainer2" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings"]
layout_mode = 2

[node name="Button" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last man standing"

[node name="lms_setting" type="CheckBox" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="BoxContainer3" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings"]
layout_mode = 2

[node name="Button" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Battle random results"

[node name="bran_setting" type="CheckBox" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
vertical = true

[node name="Control" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Capital numbers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="GridContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2"]
layout_mode = 2
columns = 2

[node name="green_number" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/green_number"]
layout_mode = 2
text = "Player has"

[node name="green_cap" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/green_number"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
selected = 0
item_count = 4
popup/item_0/text = "1 capital"
popup/item_0/id = 0
popup/item_1/text = "2 capital's"
popup/item_1/id = 1
popup/item_2/text = "3 capital's"
popup/item_2/id = 2
popup/item_3/text = "4 capital's"
popup/item_3/id = 3

[node name="plum_number" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/plum_number"]
layout_mode = 2
text = "Plum Valey has"

[node name="plum_cap" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/plum_number"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
selected = 0
item_count = 4
popup/item_0/text = "1 capital"
popup/item_0/id = 0
popup/item_1/text = "2 capital's"
popup/item_1/id = 1
popup/item_2/text = "3 capital's"
popup/item_2/id = 2
popup/item_3/text = "4 capital's"
popup/item_3/id = 3

[node name="york_number" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/york_number"]
layout_mode = 2
text = "York  Street has"

[node name="york_cap" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/york_number"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
selected = 0
item_count = 4
popup/item_0/text = "1 capital"
popup/item_0/id = 0
popup/item_1/text = "2 capital's"
popup/item_1/id = 1
popup/item_2/text = "3 capital's"
popup/item_2/id = 2
popup/item_3/text = "4 capital's"
popup/item_3/id = 3

[node name="river_number" type="BoxContainer" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/river_number"]
layout_mode = 2
text = "River Solme has"

[node name="river_cap" type="OptionButton" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/river_number"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
selected = 0
item_count = 4
popup/item_0/text = "1 capital"
popup/item_0/id = 0
popup/item_1/text = "2 capital's"
popup/item_1/id = 1
popup/item_2/text = "3 capital's"
popup/item_2/id = 2
popup/item_3/text = "4 capital's"
popup/item_3/id = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][b]CAREFUL WITH THESE SETTINGS[/b][/center]
They can crash your game."
fit_content = true

[node name="Open and close Extra Settings button" type="Button" parent="Extra_options"]
layout_mode = 0
offset_left = 480.0
offset_right = 544.0
offset_bottom = 32.0
rotation = 1.5707964
toggle_mode = true
text = "Open and close Extra Settings"

[node name="extra_setting_animator" type="AnimationPlayer" parent="Extra_options"]
libraries = {
&"": SubResource("AnimationLibrary_2fskk")
}

[connection signal="button_down" from="BoxContainer/start_game" to="." method="_on_start_game"]
[connection signal="item_selected" from="BoxContainer/map/map_setting" to="." method="_on_map_setting_item_selected"]
[connection signal="item_selected" from="BoxContainer3/BoxContainer/Music type/music_type_setting" to="." method="_on_music_type_setting_item_selected"]
[connection signal="drag_ended" from="BoxContainer3/BoxContainer/music_settings/MusicSlider" to="." method="drag_ended"]
[connection signal="value_changed" from="BoxContainer3/BoxContainer/music_settings/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="BoxContainer3/BoxContainer/sfx_settings/SfxSlider" to="." method="drag_ended"]
[connection signal="value_changed" from="BoxContainer3/BoxContainer/sfx_settings/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="value_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/wall_settings/WallSlider" to="." method="_on_wall_slider_value_changed"]
[connection signal="value_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/map Settings/BoxContainer/fuel_settings/FuelSlider" to="." method="_on_fuel_slider_value_changed"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings/green_mode/green_claim_type" to="." method="_on_green_claim_type_item_selected"]
[connection signal="text_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/green_settings/green_name" to="." method="_on_green_name_text_submitted"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings/purple_mode/purple_claim_type" to="." method="_on_purple_claim_type_item_selected"]
[connection signal="text_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/purple_settings/purple_name" to="." method="_on_purple_name_text_submitted"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings/yellow_mode/yellow_claim_type" to="." method="_on_yellow_claim_type_item_selected"]
[connection signal="text_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/yellow_settings/yellow_name" to="." method="_on_yellow_name_text_submitted"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings/red_mode/red_claim_type" to="." method="_on_red_claim_type_item_selected"]
[connection signal="text_changed" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/GridContainer/red_settings/red_name" to="." method="_on_red_name_text_submitted"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer/ai_level_setting" to="." method="_on_change_ai_level"]
[connection signal="toggled" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer2/lms_setting" to="." method="_on_lms_setting_toggled"]
[connection signal="toggled" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/claim settings/BoxContainer3/bran_setting" to="." method="_on_bran_setting_toggled"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/green_number/green_cap" to="." method="_on_green_cap_item_selected"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/plum_number/plum_cap" to="." method="_on_plum_cap_item_selected"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/york_number/york_cap" to="." method="_on_york_cap_item_selected"]
[connection signal="item_selected" from="Extra_options/BoxContainer/ScrollContainer/BoxContainer/BoxContainer2/BoxContainer/river_number/river_cap" to="." method="_on_river_cap_item_selected"]
[connection signal="toggled" from="Extra_options/Open and close Extra Settings button" to="." method="_on_open_and_close_extra_settings_button_toggled"]
